--- a/006-Object-Oriented-Programming/Object-Oriented Programming - Chap 02 - Demo.ipynb
+++ b/006-Object-Oriented-Programming/Object-Oriented Programming - Chap 02 - Demo.ipynb
@@ -316,13 +316,17 @@
         "  def invite(self, name):\n",
         "    self.people.append(name)\n",
         "  \n",
-        "  def describe(self):\n",
+        "  def desc(self):\n",
         "    start_time_str = self.start_time.strftime('%d/%m/%Y %H:%M')\n",
         "    end_time_str = (self.start_time + self.duration).strftime('%H:%M')\n",
-        "    print(f'Meeting \"{self.name}\": {start_time_str} - {end_time_str}')\n",
-        "    print('Participants:')\n",
-        "    for p in self.people:\n",
-        "      print(f'    {p}')\n",
+        "    desc = ''\n",
+        "    desc += f'Meeting \"{self.name}\": {start_time_str} - {end_time_str}'\n",
+        "    if len(self.people) > 0:\n",
+        "      desc += '\\n'\n",
+        "      desc += 'Participants:\\n'\n",
+        "      for p in self.people:\n",
+        "        desc += f'    {p}\\n'\n",
+        "    return desc\n",
         "  \n",
         "  @classmethod\n",
         "  def now(cls):\n",
@@ -343,7 +347,7 @@
         "m = Meeting('Sprint Planning', datetime(2020, 5, 4, 14, 0), timedelta(hours=4))\n",
         "m.invite('Jack')\n",
         "m.invite('John')\n",
-        "m.describe()"
+        "print(m.desc())"
       ],
       "execution_count": 0,
       "outputs": []
@@ -357,7 +361,7 @@
       },
       "source": [
         "m2 = Meeting.now()\n",
-        "m2.describe()"
+        "print(m2.desc())"
       ],
       "execution_count": 0,
       "outputs": []
