--- a/006-Object-Oriented-Programming/Object-Oriented Programming - Chap 03 - Demo.ipynb
+++ b/006-Object-Oriented-Programming/Object-Oriented Programming - Chap 03 - Demo.ipynb
@@ -302,6 +302,124 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "AxSrsONgc6fr",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Special methods"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_1_dUC8Mc8Ua",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "class Accumulator:\n",
+        "    \"\"\"Accumulates count by adding values. Initialized at 0\"\"\"\n",
+        "    def __init__(self):\n",
+        "        self.acc = 0\n",
+        "\n",
+        "    def add(self, increment: int):\n",
+        "        \"\"\"Increase the count by increment\"\"\"\n",
+        "        self.acc += increment\n",
+        "\n",
+        "    def __eq__(self, other):\n",
+        "        return self.acc == other.acc\n",
+        "    def __repr__(self):\n",
+        "        return f'Accumulator({self.acc})'\n",
+        "    def __str__(self):\n",
+        "        return str(self.acc)\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2p_vDT-2f_dH",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "a = Accumulator()\n",
+        "a.add(1138)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UCHBvOmxgDjj",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "print(a)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "FRsb2WCBgEuV",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "a"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "TCxN0ToegFfu",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "print(f\"Accumulator 'a': {a}\")"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3NoeyMvGgNk0",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "b = Accumulator()\n",
+        "b == a"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pUI46SDDgUr5",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "b.add(1138)\n",
+        "b == a"
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
