--- a/006-Object-Oriented-Programming/Object-Oriented Programming - Chap 03 - Demo.ipynb
+++ b/006-Object-Oriented-Programming/Object-Oriented Programming - Chap 03 - Demo.ipynb
@@ -310,7 +310,7 @@
         "colab_type": "text"
       },
       "source": [
-        "## Special methods"
+        "## Special methods and annotations"
       ]
     },
     {
@@ -336,6 +336,19 @@
         "        return f'Accumulator({self.acc})'\n",
         "    def __str__(self):\n",
         "        return str(self.acc)\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jkmt3yaLglCm",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "help(Accumulator)"
       ],
       "execution_count": 0,
       "outputs": []
